Fix bug with menu right-aligning on about page

--- a/css/root_page.css
+++ b/css/root_page.css
@@ -81,7 +81,7 @@ ul.affix-bottom {
     text-align: right;
 }
 
-.nav > li > a {
+#myScrollspy ul > li > a {
     text-align: right;
 }
 /* right hand sidebar related styling */
